// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allow preserve some attributes 1`] = `
<div
  ng-if="x"
>
  
      
  <div
    tv-abc="d"
    tv-xxx="y"
  />
  
    
</div>
`;

exports[`convert correctly 1`] = `
<p
  id="test"
>
  This is cool
</p>
`;

exports[`convert style values 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "padding": "0 10px",
    }
  }
>
  <span
    style={
      Object {
        "fontSize": 12,
      }
    }
  />
</div>
`;

exports[`correctly handle boolean attributes 1`] = `
<iframe
  allowFullScreen={true}
/>
`;

exports[`css html entities 1`] = `
<div
  style={
    Object {
      "fontFamily": "Consolas, \\"Liberation Mono \\"",
    }
  }
/>
`;

exports[`css vendor prefixes 1`] = `
<div
  style={
    Object {
      "WebkitTextSizeAdjust": "100%",
      "msTextSizeAdjust": "100%",
    }
  }
>
  
      prefix
    
</div>
`;

exports[`custom component 1`] = `
<p
  className="css-x243s"
  data-custom="true"
>
  Custom component
</p>
`;

exports[`dangerously render script tag 1`] = `
<script
  data-cfasync="false"
  type="text/javascript"
>
  
      var gtm4wp_datalayer_name = "dataLayer";
      var dataLayer = dataLayer || [];
      dataLayer.push({"pagePostType":"post","pagePostType2":"single-post","pageCategory":["kalender-cuti"],"pagePostAuthor":"Candra Alif Irawan"});
    
</script>
`;

exports[`decode html attributes 1`] = `
<a
  href="https://www.google.com/?a=b&c=d"
>
  test
</a>
`;

exports[`decode html entities on defaultMap 1`] = `
<p>
  & and &
</p>
`;

exports[`default mapping 1`] = `
<div>
  <span>
     
  </span>
  <div>
    <span>
      Default mapping
    </span>
  </div>
  <span>
     
  </span>
</div>
`;

exports[`element inside text node 1`] = `
Array [
  "what are ",
  <strong>
    you
  </strong>,
  " doing?",
]
`;

exports[`ignore comment 1`] = `
<div>
  no comment
</div>
`;

exports[`ignore invalid style 1`] = `
<div
  className="component-overflow"
  style={Object {}}
>
  Explore Categories
</div>
`;

exports[`ignore multiline html comment 1`] = `
<div>
  no multiline comment
</div>
`;

exports[`ignore partially invalid style 1`] = `
<div
  className="component-overflow"
  style={
    Object {
      "color": "\\"red\\"",
    }
  }
>
  Explore Categories
</div>
`;

exports[`multi children 1`] = `
Array [
  <p>
    Multi
  </p>,
  <p>
    Component
  </p>,
]
`;

exports[`newline between tags 1`] = `
<pre>
  <span>
    Hello
  </span>
  

  <span>
    World
  </span>
</pre>
`;

exports[`preserve child of style tag 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": "ul > li {
        list-style: none
      }

      div[data-id=\\"test\\"]:not(.y) {
        display: none;
      }",
    }
  }
/>
`;

exports[`remove whitespace on table 1`] = `
<table>
  <tbody>
    <tr>
      <th>
         title
      </th>
    </tr>
    <tr>
      <td>
        entry 
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`self closing component 1`] = `
<div>
  <img
    src="https://www.google.com/logo.png"
  />
  <iframe
    src="https://www.youtube.com/embed/I2-_iLzmkVw"
  />
</div>
`;

exports[`should dangerously set html for required tags 1`] = `
<pre
  dangerouslySetInnerHTML={
    Object {
      "__html": "&lt;a href=&quot;/&quot;&gt;Test&lt;/a&gt;",
    }
  }
/>
`;

exports[`style with url & protocol 1`] = `
<div
  className="tera-promo-card--header"
  style={
    Object {
      "backgroundImage": "url(https://d1nabgopwop1kh.cloudfront.net/xx)",
    }
  }
/>
`;

exports[`supports valid html attribute 1`] = `
<div
  aria-describedby="info"
  data-type="calendar"
>
  <link
    xlinkActuate="other"
    xmlLang="en"
  />
  <svg
    colorInterpolationFilters="sRGB"
    fillRule="evenodd"
  >
    <path
      fill="#fa0"
    />
  </svg>
</div>
`;

exports[`svg viewbox 1`] = `
<svg
  viewBox="0 0 24 24"
/>
`;

exports[`unescape html entities 1`] = `
<div
  className="entities"
>
  & and &
</div>
`;

exports[`unsafe html attributes 1`] = `
<label
  className="input-text"
  htmlFor="name"
/>
`;

exports[`whitespace only text nodes 1`] = `
Array [
  <span>
    Hello
  </span>,
  " ",
  <span>
    World
  </span>,
]
`;
